--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,10 @@
 					<pluginArtifact>
 						io.grpc:protoc-gen-grpc-java:1.4.0:exe:${os.detected.classifier}
 					</pluginArtifact>
+					<outputDirectory>
+					generated-sources/
+					</outputDirectory>
+					<clearOutputDirectory>false</clearOutputDirectory>
 				</configuration>
 				<executions>
 					<execution>
